Fix Netherite Space Suit